extends Node3D

class_name TradeTerminalUi

@export
var trade_terminal_buy_button : InteractionButton

@export
var trade_change_ammount_buttons : TradeChangeAmmountButtons

@export
var trade_credit_label : TradeCreditLabel

@export
var trade_item_information_screen : TradeItemInformationScreen

@export
var trade_item_list : TradeItemList

@export
var error_noise : AudioStreamPlayer3D
